# RayTracer

./: .gitignore  Algebra.cpp  Algebra.h  CMakeLists.txt  CameraHandler.cpp  CameraHandler.h  Makefile  Ray.cpp  Ray.h  SceneHandler.cpp  SceneHandler.h  World.cpp  a.out  ceng477hw1.cpp  ceng477hw1.h  cmake_install.cmake  parser.cpp  parser.h  raytracer.cpp  raytracer.tar  simple.ppm  tmp.txt
